# boosters

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  coverage.xml  pyproject.toml  results.md
boosters-python/: Cargo.toml  README.md  pyproject.toml
boosters-python/python/boosters/: __init__.py  convert.py  sklearn.py
boosters-python/src/: dataset.rs  error.rs  gbdt.rs  lib.rs  linear.rs  params.rs
boosters-python/tests/: test_convert.py  test_import.py  test_serialization.py  test_sklearn.py  test_training.py
crates/boosters-fuzz/: Cargo.toml  README.md
docs/: .gitignore  PERFORMANCE_COMPARISON.md  README.md  ROADMAP.md  conf.py  index.rst  pyproject.toml
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
docs/analysis/: growth_strategy_comparison.md  src_audit.md  src_items.json  strict_audit_2025-12-13.md
docs/api/: index.rst  rust.rst
docs/audits/: 2025-12-19-code-audit.md
docs/backlog/: 02-gblinear.md  03-gbtree-training.md  04-lightgbm-compat.md  05-gbtree-training-phase2.md  06-sample-weighting.md  07-api-refactoring.md  08-row-parallel-histograms.md  99-future.md
docs/backlogs/: 0005-objectives-metrics-vnext.md  0005-output-transform.md  0009-data-module-restructuring.md  0015-evaluation-framework.md  0016-model-serialization.md  0017-documentation.md  0021-dataset-separation.md  03-feature-bundling-categoricals.md  04-audit-followup.md  05-storage-format.md  06-model-api-and-python.md  07-explainability.md  08-api-layering-redesign.md  09-api-polish-cleanup.md  1.0.0-release.md  10-stakeholder-feedback.md  11-dataset-and-views.md  11-ndarray-cleanup.md  12-ndarray-cleanup.md  13-api-cleanup-round2.md  14-python-bindings.md  15-python-polish.md  18-binned-dataset-redesign.md  dataset-consolidation-v2.md  dataset-consolidation.md  deprecated-removal.md  lightgbm-style-efb.md  linear-trees-comparison.md  linear-trees-prediction-refactor.md
docs/benchmarks/: 2024-11-27-baseline.md  2024-11-28-m352-unrolled.md  2024-11-28-m37-thread-parallelism.md  2024-11-28-simd-analysis.md  2024-11-29-m38-performance-validation.md  2025-01-16-3df5707-performance-report.md  2025-01-21-4aa7d65-performance-report.md  2025-01-21-4aa7d65-quality-report.md  2025-01-21-binning-optimization.md  2025-01-27-quality-performance-report.md  2025-01-8065629-quality-comparison.md  2025-01-8065629-training-speed.md  2025-06-09-split-finding-optimization.md  2025-11-29-gradient-batch.md  2025-11-29-gradient-soa.md  2025-11-29-matrix-layout-training.md  2025-11-30-gbtree-vs-xgboost.md  2025-11-30-lightgbm-vs-booste-rs.md  2025-12-02-prediction-layout.md  2025-12-14-benchmark-report.md  2025-12-14-prediction-benchmarks.md  2025-12-14-training-and-quality.md  2025-12-15-1-library-comparison.md  2025-12-15-2-interleaved-gradients.md  2025-12-15-3-optimization-summary.md  2025-12-15-4-quality-performance-report.md  2025-12-15-b72721e-columnmajor-optimization.md  2025-12-15-interleaved-gradients.md  2025-12-15-library-comparison.md  2025-12-15-optimization-summary.md  2025-12-16-3df5707-quality-report.md  2025-12-16-67d2d89-gblinear-optimization.md  2025-12-16-c1a7ab5-comprehensive-report.md  2025-12-16-c1a7ab5-quality-report.md  2025-12-18-6958442-linear-trees-performance.md  2025-12-19-0f8c2b2-efb-performance.md  2025-12-20-c6cc704-post-refactor.md  2025-12-20-f89b89d-pre-refactor-baseline.md  2025-12-24-4154b94-pre-migration-baseline.md  2026-01-03-777d518-persist-performance.md  (+5 more)
docs/contributing/: architecture.rst  development.rst  index.rst
docs/design/: CONTRIBUTING.md  FEATURE_OVERVIEW.md  MERGE_PLAN.md  NOTES.md  PERF_PROPOSAL.md  README.md  REPRESENTATION_UNIFICATION.md  REPR_REFACTOR_PLAN.md  ROADMAP.md  index.rst  lightgbm-optimizations.md  rfcs.rst
docs/explanations/: benchmarks.rst  gbdt.rst  gblinear.rst  gradient-boosting.rst  hyperparameters.rst  index.rst  objectives-metrics.rst
docs/getting-started/: index.rst  installation.rst  quickstart-python.rst  quickstart-rust.rst
docs/howto/: categorical-features.rst  custom-objectives.rst  debugging-performance.rst  faq.rst  glossary.rst  index.rst  missing-values.rst  production-deployment.rst  recipes.rst
docs/research/: README.md  arrow-datasets.md  categorical-features.md  classification-objectives.md  explainability.md  feature-bundling.md  gradient-boosting.md  implementation-notes.md  index.rst  library-comparison.md  storage-formats.md
docs/rfcs/: 0001-data-matrix.md  0001-data-types.md  0001-dataset.md  0002-forest-and-tree-structures.md  0002-trees.md  0003-binning.md  0003-inference-pipeline.md  0004-efb.md  0004-quantization-and-binning.md  0005-histogram-building.md  0005-objectives-metrics.md  0005-tree-growing.md  0006-sampling.md  0006-split-finding.md  0007-histograms.md  0007-tree-growing.md  0008-arrow-parquet-io.md  0008-gbdt-training.md  0008-objectives-and-losses.md  0009-evaluation-metrics.md  0009-gbdt-inference.md  0009-gblinear.md  0010-gblinear.md  0010-linear-trees.md  0010-sampling-strategies.md  0011-feature-bundling.md  0011-linear-leaves.md  0011-multi-output-training.md  0012-categoricals.md  0012-model-compatibility.md  0013-arrow-parquet-io.md  0013-explainability.md  0014-gblinear.md  0014-python-bindings.md  0015-evaluation-framework.md  0015-linear-trees.md  0016-model-serialization.md  0016-prediction-architecture.md  0016-single-threaded-optimization.md  0017-documentation.md  (+18 more)
docs/scripts/: validate_links.py
docs/tools/: boosters-eval.rst
docs/tutorials/: 01-basic-training.ipynb  02-sklearn-integration.ipynb  03-classification.ipynb  04-multiclass.ipynb  05-early-stopping.ipynb  06-gblinear-sparse.ipynb  07-hyperparameter-tuning.ipynb  08-explainability.ipynb  09-model-serialization.ipynb  10-linear-trees.ipynb  11-sample-weighting.ipynb  index.rst
docs/user-guide/: choosing-api.rst  classification.rst  early-stopping.rst  explainability.rst  gblinear.rst  hyperparameters.rst  index.rst  linear-trees.rst  production.rst  quickstart.rst  recipes.rst  serialization.rst
tools/data_generation/: benchmark_results.json  generate_lightgbm.py  main.py  pyproject.toml
(+1004 files in other folders)
