[package]
name = "booste-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"

# Approximate equality traits (used in PredictionOutput)
approx = "0.5"

# Parallel processing
rayon = "1.10"

# Random number generation (for shuffle selector and sampling)
rand = "0.8"
rand_xoshiro = "0.6"

# Optional: SIMD acceleration
wide = { version = "0.7", optional = true }

# Optional: XGBoost compatibility
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_with = { version = "3.16.0", features = ["json"], optional = true }

# Optional: XGBoost C++ bindings for benchmark comparison
# Fork with reset() method for accurate benchmarking (clears internal caches)
# Requires: libclang-dev (Debian/Ubuntu), clang (Arch), or Xcode (macOS)
xgb = { git = "https://github.com/egordm/rust-xgboost-bindings.git", optional = true }

# Optional: LightGBM C++ bindings for benchmark comparison
# Compiles LightGBM from source for fair native performance comparison
# Requires: cmake, libclang-dev (Debian/Ubuntu), clang (Arch), or Xcode (macOS)
lightgbm3 = { version = "1.0", optional = true }

[dev-dependencies]
glob = "0.3.3"
rstest = "0.21"
serde_json = "1.0"  # Always available in tests
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"  # For generating random benchmark inputs

[features]
default = ["xgboost-compat"]
xgboost-compat = ["dep:serde", "dep:serde_json", "dep:serde_with"]
lightgbm-compat = ["dep:serde", "dep:serde_json"]
simd = ["dep:wide"]
bench-xgboost = ["dep:xgb", "xgboost-compat"]
bench-lightgbm = ["dep:lightgbm3", "lightgbm-compat"]

[[bench]]
name = "prediction_core"
harness = false

[[bench]]
name = "prediction_strategies"
harness = false

[[bench]]
name = "prediction_parallel"
harness = false

[[bench]]
name = "training_core"
harness = false

[[bench]]
name = "training_access_patterns"
harness = false

[[bench]]
name = "training_gbtree"
harness = false

[[bench]]
name = "prediction_lightgbm"
harness = false
required-features = ["bench-lightgbm"]

