[package]
name = "booste-rs"
version = "0.1.0"
edition = "2024"
autobenches = false

[dependencies]
thiserror = "1.0"

# Approximate equality traits (used in PredictionOutput)
approx = "0.5"

# Parallel processing
rayon = "1.10"

# Random number generation (for shuffle selector and sampling)
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"

# Optional: SIMD acceleration
wide = { version = "0.7", optional = true }

# Optional: XGBoost compatibility
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_with = { version = "3.16.0", features = ["json"], optional = true }

# Optional: dataset loaders for benches/tools
zstd = { version = "0.13", optional = true }

# Optional: Arrow/Parquet I/O (RFC-0029)
arrow = { version = "54", optional = true, default-features = false, features = ["ipc"] }
parquet = { version = "54", optional = true, default-features = false, features = ["arrow", "snap"] }

# Optional: XGBoost C++ bindings for benchmark comparison
# Fork with reset() method for accurate benchmarking (clears internal caches)
# Requires: libclang-dev (Debian/Ubuntu), clang (Arch), or Xcode (macOS)
xgb = { git = "https://github.com/egordm/rust-xgboost-bindings.git", optional = true }

# Optional: LightGBM C++ bindings for benchmark comparison
# Compiles LightGBM from source for fair native performance comparison
# Requires: cmake, libclang-dev (Debian/Ubuntu), clang (Arch), or Xcode (macOS)
lightgbm3 = { version = "1.0", optional = true }
derive_builder = "0.20.2"

[dev-dependencies]
glob = "0.3.3"
rstest = "0.21"
serde = { version = "1.0", features = ["derive"] } # Needed by integration tests under --no-default-features
serde_json = "1.0"  # Always available in tests
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"  # For generating random benchmark inputs
rand_chacha = "0.3"  # For reproducible RNG in benchmarks
tempfile = "3.20"  # For Arrow/Parquet I/O tests

[features]
default = ["xgboost-compat"]
xgboost-compat = ["dep:serde", "dep:serde_json", "dep:serde_with"]
lightgbm-compat = ["dep:serde", "dep:serde_json"]
simd = ["dep:wide"]
bench-xgboost = ["dep:xgb", "xgboost-compat"]
bench-lightgbm = ["dep:lightgbm3", "lightgbm-compat"]
bench-training = []
testing-utils = ["dep:serde", "dep:serde_json", "dep:zstd"]
io-arrow = ["dep:arrow"]
io-parquet = ["dep:parquet", "dep:arrow"]

[[bench]]
name = "prediction_core"
harness = false
path = "benches/suites/component/predict.rs"

[[bench]]
name = "prediction_strategies"
harness = false
path = "benches/suites/component/predict_strategies.rs"

[[bench]]
name = "prediction_parallel"
harness = false
path = "benches/suites/component/predict_parallel.rs"

[[bench]]
name = "training_core"
harness = false
required-features = ["bench-training"]
path = "benches/suites/component/train_gblinear.rs"

[[bench]]
name = "training_gbdt"
harness = false
path = "benches/suites/component/train_gbdt.rs"

[[bench]]
name = "e2e_train_predict_gbdt"
harness = false
path = "benches/suites/e2e/train_predict_gbdt.rs"

# Unified comparison benchmarks (preferred)
[[bench]]
name = "compare_training"
harness = false
path = "benches/suites/compare/training.rs"

[[bench]]
name = "compare_prediction"
harness = false
path = "benches/suites/compare/prediction.rs"
