[project]
name = "boosters-workspace"
version = "0.1.0"
description = "Boosters monorepo workspace"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
boosters = { workspace = true }
boosters-datagen = { workspace = true }
boosters-eval = { workspace = true }
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "poethepoet>=0.31.0",
    "pyproject-fmt>=2.0",
    "nbmake>=1.5",
    "maturin>=1.0",
    "microsoft-python-type-stubs",
]

# =============================================================================
# Poe Tasks - Run with: uv run poe <task>
# Check mode: poe check (verify only), Fix mode: poe fix (auto-fix)
# =============================================================================
[tool.poe.tasks]

# Individual tools
lint = { cmd = "ruff check .", help = "Run ruff linter" }
lint-fix = { cmd = "ruff check --fix .", help = "Run ruff linter with auto-fix" }
format = { cmd = "ruff format .", help = "Format code with ruff" }
format-check = { cmd = "ruff format --check .", help = "Check code formatting" }
typecheck = { cmd = "pyright", help = "Run pyright type checker" }

# Combined tasks
check = { sequence = ["format-check", "lint", "typecheck"], help = "Run all checks (no auto-fix)" }
fix = { sequence = ["format", "lint-fix"], help = "Auto-fix formatting and linting" }
test = { cmd = "pytest", help = "Run all tests" }

# Package-specific tasks (boosters-python)
"python:test" = { cmd = "pytest packages/boosters-python/tests -v", help = "Run boosters-python tests" }
"python:doctest" = { cmd = "pytest packages/boosters-python/python --doctest-modules", help = "Run boosters-python doctests" }
"python:examples" = { shell = "for f in packages/boosters-python/examples/*.py; do echo \"Running $f...\"; python \"$f\" || exit 1; done", help = "Run all example scripts" }
# Note: stubgen requires PYTHONHOME for uv-managed Python, use: python:stubs:gen
"python:stubs" = { shell = "cd packages/boosters-python && PYTHONHOME=$(python -c 'import sys; print(sys.base_prefix)') cargo run --bin stubgen", help = "Generate Python type stubs" }

# =============================================================================
# Ruff Configuration (shared across all packages)
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages/*/src", "packages/*/python", "packages/*/tests", "packages/*/examples"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific
    "D",      # pydocstyle (docstrings)
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "D100",   # Missing docstring in public module (too noisy for now)
    "D102",   # Missing docstring in public method (too noisy for now)
    "D104",   # Missing docstring in public package (too noisy for now)
    "D107",   # Missing docstring in __init__ (too noisy for now)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "B017", "F401"]
"**/tests/*" = ["D", "B017", "F401"]
"**/cli.py" = ["B008"]  # Typer uses function calls in defaults
"**/_boosters_rs.pyi" = ["D", "F821"]  # Generated stub file

[tool.ruff.lint.isort]
known-first-party = ["boosters", "boosters_eval", "boosters_datagen"]

# =============================================================================
# Pyright Configuration (shared across all packages)
# =============================================================================
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["packages/*/src", "packages/*/python", "packages/*/tests", "packages/*/examples"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]
# External libraries have incomplete stubs
reportMissingTypeStubs = false

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
