[project]
name = "boosters-workspace"
version = "0.1.0"
description = "Boosters monorepo workspace"
requires-python = ">=3.12"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
  "maturin>=1",
  "microsoft-python-type-stubs",
  "nbmake>=1.5",
  "poethepoet>=0.31",
  "pydantic>=2",
  "pyproject-fmt>=2",
  "pyright>=1.1",
  "pytest>=8",
  "pytest-cov>=4",
  "ruff>=0.8",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [ "packages/*", "docs" ]

[tool.uv.sources]
boosters = { workspace = true }
boosters-eval = { workspace = true }
boosters-docs = { workspace = true }
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

[tool.ruff]
target-version = "py312"
line-length = 120
src = [ "packages/*/python", "packages/*/src" ]
include = [ "packages/**/*.py" ]

output-format = "concise"
format.preview = true
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401",  # Any types sometimes unavoidable with flexible APIs
  "BLE001",  # Broad exception catches are sometimes intentional in CLI/reporting
  "COM812",  # Conflicting rules (a), ruff itself suggest disabling them
  "CPY001",  # Reuse covers copyright checks
  "D203",    # Conflicting rules (a), ruff itself suggest disabling them
  "D213",    # Conflicting rules (a), ruff itself suggest disabling them
  "EM101",   # do not enforce message in variable when raising an exception
  "EM102",   # do not enforce message in variable when raising an exception (f-string)
  "FIX002",  # TODO's are allowed when they are linked to an issue (TD003 handles that part)
  "PGH003",  # Allow generic type ignores, since sometimes there are multiple unresolvable issues
  "PLC0415", # Lazy imports are used for CLI startup and optional deps
  "PLR2004", # Magic value comparison - too many false positives (2 for dims, 0.5 for thresholds, etc.)
  "S607",    # Allow calling common executables like `git` by name
  "TC001",   # Don't force moving application imports into TYPE_CHECKING blocks
  "TC002",   # Don't force moving third-party imports into TYPE_CHECKING blocks
  "TC003",   # Don't force moving stdlib imports into TYPE_CHECKING blocks
  "TC006",   # Let's not force quoting the first param of typing.cast
  "TRY003",  # simplify exception messages
]
lint.per-file-ignores."**/*.pyi" = [
  "D",   # Docstrings are intentionally included in generated stubs for IDE tooltips
  "F",   # Unused imports / undefined names are expected in stubs
  "PIE", # Unnecessary ellipsis etc. are generated by pyo3_stub_gen
  "PYI", # Stub-specific rules conflict with pyo3_stub_gen output
  "UP",  # Upgrade suggestions (Optional -> X | None) not worth fixing in generated code
  "W",   # Whitespace issues from generator
]
lint.per-file-ignores."**/cli.py" = [
  "B008",    # Typer uses function calls in defaults
  "FBT001",  # Typer option bools are fine as function params
  "FBT002",  # Typer option bools are fine as function params
  "PLC0415", # Lazy imports for fast CLI startup
]
lint.per-file-ignores."./packages/*/examples/*" = [
  "INP001", # example folders are not packages
  "T201",   # print is expected in examples
]
lint.per-file-ignores."./packages/*/tests/*" = [
  "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant
  "D",       # Docstring rules relaxed in tests
  "DOC",     # Docstring rules relaxed in tests
  "FBT",     # Booleans as positional arguments common in @pytest.mark.parametrize()
  "INP001",  # Test directories don't need __init__.py
  "PLC0415", # Lazy imports in conditional test logic
  "PT018",   # Compound assertions acceptable in tests
  "S101",    # Asserts expected in tests
  "S311",    # Standard pseudo-random generators fine in tests
  "SLF001",  # Private access often needed in tests
]
lint.per-file-ignores."./{docs,examples}/*" = [
  "INP001", # example folders are not packages
]
lint.fixable = [ "ALL" ]

# Rule parameter adjustments
lint.flake8-annotations.allow-star-arg-any = true      # *args and **kwargs are allowed to be Any
lint.flake8-annotations.suppress-dummy-args = true     # do not type _ arguments/variables
lint.flake8-annotations.suppress-none-returning = true # do not require annotation if None is returned/there is no return
lint.mccabe.max-complexity = 30                        # Report formatting can be moderately complex
lint.pydocstyle.convention = "google"
lint.pylint.max-args = 8                               # ML libs often have many hyperparameters (default: 5)
lint.pylint.max-branches = 40                          # Report formatting has many conditional branches
lint.pylint.max-statements = 100                       # Report formatting can be statement-heavy

[tool.pytest.ini_options]
testpaths = [ "packages/*/tests" ]
python_files = [ "test_*.py" ]
python_functions = [ "test_*" ]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = [ "packages/*/src", "packages/*/python", "packages/*/tests", "packages/*/examples" ]
exclude = [ "**/__pycache__", "**/.venv", "**/node_modules" ]
# External libraries have incomplete stubs
reportMissingTypeStubs = false

[tool.poe.tasks]
[tool.poe.tasks."python:lint"]
help = "Lint code (with ruff)"
control.expr = "check"
switch = [
  { case = true, cmd = "ruff check" },
  { cmd = "ruff check --fix --show-fixes ${unsafe:+ --unsafe-fixes}" },
]
args = [
  { name = "check", type = "boolean", help = "Do not apply fixes (CI mode)" },
  { name = "unsafe", type = "boolean", help = "Allow unsafe fixes (only applies without --check)" },
]

[tool.poe.tasks."python:format"]
help = "Format code (with ruff)"
control.expr = "check"
args = [ { name = "check", type = "boolean", help = "Does not correct files, only warns", default = false } ]
switch = [
  { case = true, cmd = "ruff format --diff" },
  { cmd = "ruff format" },
]

[tool.poe.tasks."python:format-pyproject"]
help = "Format pyproject.toml (with pyproject-fmt)"
control.expr = "check"
args = [ { name = "check", type = "boolean", help = "Does not correct files, only warns", default = false } ]
switch = [
  { case = true, cmd = "pyproject-fmt --check -n pyproject.toml packages/*/pyproject.toml" },
  { cmd = "pyproject-fmt -n pyproject.toml packages/*/pyproject.toml" },
]

[tool.poe.tasks."python:lock"]
help = "Asserts that dependencies are locked"
cmd = "uv lock --check"

[tool.poe.tasks."python:type"]
help = "Check typing (with pyright)"
cmd = "pyright packages/*/src packages/*/examples"

[tool.poe.tasks."python:type-tests"]
help = "Check typing (with pyright)"
cmd = "pyright packages/*/tests"

[tool.poe.tasks."python:test"]
help = "Run pytests"
cmd = "pytest ${markers:+ -m $markers} --cov --cov-report=term-missing --cov-report=xml:target/coverage.xml"
args = [
  { name = "markers", type = "string", default = "", help = "Only run tests matching the given pytest markers expression" },
]

[tool.poe.tasks."python:doctest"]
help = "Run all docstring examples via pytest's doctest plugin"
cmd = "pytest --doctest-modules packages/*/src --maxfail=1"

[tool.poe.tasks."python:stubs-gen"]
help = "Generate Python type stubs for boosters-python"
uses = { PYTHONHOME = "_python:pyhome" }
cmd = "cargo run --bin stubgen --package boosters-python"

[tool.poe.tasks."_python:pyhome"]
help = "(internal) Prints sys.base_prefix for PYTHONHOME"
cmd = "python -c 'import sys; print(sys.base_prefix)'"

[tool.poe.tasks."rust:clean"]
help = "Clean all Rust build artifacts"
cmd = "cargo clean --workspace"

[tool.poe.tasks."rust:format"]
help = "Format all Rust code (with cargo fmt)"
control.expr = "check"
args = [
  { name = "check", type = "boolean", help = "Automatically check formatting without applying changes", default = false },
]
switch = [
  { case = true, cmd = "cargo fmt --all -- --check" },
  { cmd = "cargo fmt --all" },
]

[tool.poe.tasks."rust:lint"]
help = "Lint all Rust code (with cargo clippy)"
control.expr = "check"
switch = [
  { case = true, cmd = "cargo clippy --workspace --all-features --all-targets -- -D warnings" },
  { cmd = "cargo clippy --workspace --all-features --all-targets --fix --allow-dirty --allow-staged -- -D warnings" },
]
args = [ { name = "check", type = "boolean", help = "Do not apply fixes (CI mode)" } ]

[tool.poe.tasks."rust:build:core"]
help = "Build the core Rust library"
cmd = "cargo build --package boosters ${release:+ --release}"
args = [ { name = "release", type = "boolean", help = "Build in release mode" } ]

[tool.poe.tasks."rust:build:python"]
help = "Build the Python Rust library"
sequence = [
  "python:stubs-gen",
  { cmd = "cargo build --package boosters-python ${release:+ --release}" },
]
args = [ { name = "release", type = "boolean", help = "Build in release mode" } ]

[tool.poe.tasks."rust:build"]
help = "Build all Rust libraries"
control.expr = "release"
args = [ { name = "release", type = "boolean", help = "Build in release mode" } ]
switch = [
  { case = true, sequence = [
    "rust:build:core --release",
    "rust:build:python --release",
  ] },
  { sequence = [
    "rust:build:core",
    "rust:build:python",
  ] },
]

[tool.poe.tasks."rust:test:core"]
help = "Run Rust tests"
cmd = "cargo test --package boosters ${release:+ --release} ${all:+ --all-features}"
args = [
  { name = "release", type = "boolean", help = "Run tests in release mode", default = false },
  { name = "all", type = "boolean", help = "Run all tests, including all features and targets", default = false },
]

[tool.poe.tasks."rust:test:python"]
help = "Run Python tests for the Python Rust library"
cmd = "cargo test --package boosters-python ${release:+ --release}"
args = [
  { name = "release", type = "boolean", help = "Run tests in release mode", default = false },
]

[tool.poe.tasks."python:develop"]
help = "Build and install the Python package in development mode (editable)"
cmd = "maturin develop -m packages/boosters-python/Cargo.toml ${release:+ --release}"
args = [
  { name = "release", type = "boolean", help = "Build in release mode", default = false },
]

[tool.poe.tasks."eval:check"]
help = "Run evaluation regression check against committed baseline"
cmd = "boosters-eval check --suite full --tolerance 0.02"

[tool.poe.tasks."python:all"]
help = "Run all Python CI calls"
control.expr = "check"
switch = [
  { case = true, sequence = [
    "python:stubs-gen",
    "python:lint --check",
    "python:format --check",
    "python:format-pyproject --check",
    "python:lock",
    "python:type",
    "python:type-tests",
    "python:develop --release",
    "python:test",
    "python:doctest",
    "eval:check",
  ], ignore_fail = "return_non_zero" },
  { sequence = [
    "python:lint",
    "python:format",
    "python:format-pyproject",
    "python:lock",
    "python:type",
  ], ignore_fail = "return_non_zero" },
]
args = [ { name = "check", type = "boolean", help = "Does not correct files, only warns", default = false } ]

[tool.poe.tasks."rust:all"]
help = "Run all Rust CI calls"
control.expr = "check"
switch = [
  { case = true, sequence = [
    "rust:format --check",
    "rust:lint --check",
    "rust:build:core --release",
    "rust:build:python --release",
    "rust:test:core --release --all",
    "rust:test:python --release",
  ], ignore_fail = "return_non_zero" },
  { sequence = [
    "rust:format",
    "rust:lint",
  ], ignore_fail = "return_non_zero" },
]
args = [ { name = "check", type = "boolean", help = "Does not correct files, only warns", default = false } ]

[tool.poe.tasks."all"]
help = "Run all CI calls (Python and Rust)"
control.expr = "check"
switch = [
  { case = true, sequence = [
    "python:all --check",
    "rust:all --check",
  ], ignore_fail = "return_non_zero" },
  { sequence = [
    "python:all",
    "rust:all",
  ], ignore_fail = "return_non_zero" },
]
args = [ { name = "check", type = "boolean", help = "Does not correct files, only warns", default = false } ]

[tool.poe.tasks."check"]
help = "CI-style checks (no auto-fixes)"
sequence = [
  "all --check",
]

# Documentation tasks
[tool.poe.tasks."docs:build"]
help = "Build Sphinx documentation"
cmd = "sphinx-build -j auto docs docs/_build/html"
env = { PYTHONHASHSEED = "0" }

[tool.poe.tasks."docs:serve"]
help = "Build and serve documentation locally"
sequence = [
  "docs:build",
  { cmd = "python -m http.server -d docs/_build/html 8000" },
]

[tool.poe.tasks."docs:watch"]
help = "Watch and auto-rebuild documentation"
cmd = "sphinx-autobuild docs docs/_build/html --port 8001 --open-browser"
env = { PYTHONHASHSEED = "0" }

[tool.poe.tasks."docs:clean"]
help = "Clean documentation build artifacts"
cmd = "rm -rf docs/_build"

[tool.poe.tasks."docs:linkcheck"]
help = "Check documentation links"
cmd = "sphinx-build -b linkcheck docs docs/_build/linkcheck"

[tool.poe.tasks."docs:coverage"]
help = "Check API documentation coverage"
cmd = "sphinx-build -b coverage docs docs/_build/coverage"

[tool.poe.tasks."docs:validate"]
help = "Validate documentation internal links"
cmd = "python docs/scripts/validate_links.py --docs-root docs"
