[package]
name = "boosters-python"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "boosters_python"
crate-type = ["cdylib"]

[features]
default = ["xgboost-compat", "lightgbm-compat"]
xgboost-compat = ["boosters/xgboost-compat"]
lightgbm-compat = ["boosters/lightgbm-compat"]

[dependencies]
# Core library
boosters = { path = "..", features = ["storage"] }

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

# Serialization (for XGBoost JSON parsing)
serde_json = "1.0"

# Error handling
thiserror = "1.0"
