[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "boosters"
version = "0.1.0"
description = "Fast gradient boosting library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["machine-learning", "gradient-boosting", "xgboost", "lightgbm"]

dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
sklearn = [
    "scikit-learn>=1.0",
]
shap = ["shap>=0.42"]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "maturin>=1.5",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "boosters._boosters_python"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "pytest>=8.4.2",
]
